[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gllm"
version = "0.1.0"
description = "A distributed language model serving system with load balancing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask",
    "backoff",
    "requests",
    "pydantic",
    "openai",
]

[project.scripts]
gllm = "gllm.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/gllm"
Repository = "https://github.com/yourusername/gllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["gllm*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
# Pytest configuration for the gllm test suite
markers = [
    "threading: marks tests that use threading and may have context teardown issues",
]
# Increase verbosity and ignore common test warnings
addopts = "-v --tb=short" 